# raven-features

./: .gitignore  README.md  cli.py  config-template.yaml  driver.py  pyproject.toml  requirements.txt  setup.py  test_run_fixed.yaml
docs/: Featurization_Pipeline_Tutorial.ipynb
raven_features/: cli.py  driver.py
raven_features/utils/: aws.py  clearml.py  config.py  decorators.py  env.py  logs.py  models.py  query.py
src/raven_features/: cli.py  entrypoint.py
src/raven_features/utils/: audit.py  aws.py  cml.py  composer.py  config.py  env.py  filesystem.py  models.py  provisioning.py  query.py  summarize.py  time.py
utils/: aws.py  config.py  params.py
